# PRISMA_S_Lit_Report

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_PUSH_INSTRUCTIONS.md  README.md  push_to_github.bat  pyproject.toml
desktop_runner/Supply_Chain_Data_Review_Runner_v2_2_alpha/: README.md  app.py  build_windows.bat  requirements.txt  runner_manifest.json
desktop_runner/Supply_Chain_Data_Review_Runner_v2_2_alpha/docs/: DESKTOP_RUNNER_DESIGN.md
desktop_runner/Supply_Chain_Data_Review_Runner_v2_2_alpha/protocol_engine/: __init__.py  input_workbook_loader.py  run_protocol.py
desktop_runner/Supply_Chain_Data_Review_Runner_v2_2_alpha/protocol_v2_1/: CHANGELOG.md  requirements.txt
desktop_runner/Supply_Chain_Data_Review_Runner_v2_2_alpha/templates/: Supply_Chain_Data_Review_Input_Template_v2_2.xlsx
docs/: CLAUDE_PROJECT_CONTEXT.md  project_context_summary.md
keywords/: keyword_dictionary_v1.1.csv
prisma_s/: __init__.py  cli.py  compliance.py  drive.py  extract.py  keywords.py  runner.py  search.py  wizard.py
protocol/: PRISMA_keyword_protocol_v1.1.md
protocols/supply_chain_data_review_protocol_v2_1/: .gitignore  MANIFEST.yml  README.md  v1_5_state_manifest.json
protocols/supply_chain_data_review_protocol_v2_1/config/: a1_organization_additions_v1_5.csv  c1_metadata_corrections_v1_5.csv  dataset_name_crosswalk_v1_5.csv  e1_grouping_rules_v1_5.csv  frozen_text_protocol_params_v1_5.yml  invalidated_provisional_rebuild_artifacts_v1_5.csv  protocol_v2_0_params.yml
scripts/: keyword_corpus_analysis.py
tests/: test_search.py
(+63 files in other folders)
